Bug(211)- Layout shift on Landing page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -100,6 +100,10 @@ body,
   scrollbar-gutter: stable;
 }
 
+nav {
+  padding-left: calc(100vw - 100%);
+}
+
 /*
 _______FOR GRADIENT ANIMATION______
 */
